# game.libretro.beetle-saturn

./: .travis.yml  CMakeLists.txt  README.md  appveyor.yml
depends/common/beetle-saturn/: CMakeLists.txt  beetle-saturn.txt
game.libretro.beetle-saturn/: addon.xml.in
game.libretro.beetle-saturn/resources/: settings.xml
game.libretro.beetle-saturn/resources/language/English/: strings.po
